--- a/547/M1/M1.tex
+++ b/547/M1/M1.tex
@@ -5,7 +5,7 @@
 \maketitle
 
 \section{Homework}
-\begin{tlist}{---------}
+\begin{tlist}{9}
 
 	\item[2.1(a)]
 	Start at $S1$, whenever encounter an $a$, move forward. If there is exactly 2 $a$s in the string, it should stop at $S3$.
@@ -17,7 +17,7 @@
 
 	\item[4.1(a)]
 	$(a+b)^*$
-	\begin{tlist}{---}
+	\begin{tlist}{3}
 		\item[1.] $(a+b)^0=\{\Lambda\}\subseteq L(S)$
 		\item[2.] Assume $(a+b)^k\subseteq L(S)$. We have
 		\begin{align*}
@@ -30,7 +30,7 @@
 
 	\item[4.1(b)]
 	$(a+b)^*a$
-	\begin{tlist}{---}
+	\begin{tlist}{3}
 		\item[1.] $(a+b)^0a=\{a\}\subseteq L(S)$
 		\item[2.] Assume $(a+b)^ka\subseteq L(S)$. We have
 		\begin{align*}
@@ -47,7 +47,7 @@
 
 \section{Quiz}
  (Only simple notes.)
-\begin{tlist}{---}
+\begin{tlist}{3}
 
 	\item[1.]
 	By Cantor's diagonal argument, it's obvious that $[0,1]$ is an uncountable set.
@@ -65,8 +65,8 @@
 
 	\item[5.] {\bf(4.1(c))}
 	$b(ab)*$
-  
-  \item[6.] {\bf(4.1(h))}
+
+	\item[6.] {\bf(4.1(h))}
 	$\displaystyle\bigcup_{k\text{ is odd}}(a+b)^k$
 
 \end{tlist}
