--- a/tools/Template.tex
+++ b/tools/Template.tex
@@ -16,6 +16,7 @@
 \usepackage{fontspec}
 \usepackage{titlesec}
 \usepackage[colorlinks, urlcolor=blue]{hyperref}
+\usepackage{diagbox}
 %-------------------------------%
 %          Page Style           %
 %-------------------------------%
