--- a/571/L1/L1.tex
+++ b/571/L1/L1.tex
@@ -1,18 +1,41 @@
 \documentclass{article}
   \input{../../tools/Template}
   \def\Assignment{CES571S - L1 - TCP/IP Attack}
+  \newcommand{\code}[1]{{\ttfamily #1}}
 \begin{document}
 \maketitle
 \section{Lab Environment}
 We need 3 machines to accomplish this lab, one \textbf{Attacker}, one \textbf{Client}, one \textbf{Server}. I choose to create 3 VM with VirtualBox. In order to connet all 3 VM to internet and connet them with each others and the host, I create a bridge to share the Ethernet in the host, so they all under the 192.168.137.***.
 \section{Lab Tasks}
+
 \subsection{SYN Flooding Attack}
 In order to observe the attack result easily. I used a tool called \textbf{tcpping}, which is similar to ping but using tcp protocol. So hopefully my attack will jam the \textbf{tcpping}. And every thing worked smoothly.\\
-With {\ttfamily "netwox 76 -i 192.168.137.167 -p 80"}, the \textbf{Attacker} attacked the \textbf{Server} at port 80.\\
-With {\ttfamily "tcpping 192.168.137.167 80"}, the \textbf{Client} is able to send tcp request to \textbf{Server} at the same port. So we can find out if our attack were successful.\\
-And by the way, though the {\ttfamily "netwox 76"} won't log no matter it's success or not, we can still tell the difference physically. When the SYN cookie is turned on, this command won't do anything. But when the SYN cookie is turned off, this command will cause the cooling fan to make a huge noise.\\
+With \code{netwox 76 -i 192.168.137.167 -p 80}, the \textbf{Attacker} attacked the \textbf{Server} at port 80.\\
+With \code{tcpping 192.168.137.167 80}, the \textbf{Client} is able to send tcp request to \textbf{Server} at the same port. So we can find out if our attack were successful.\\
+And by the way, though the \code{netwox 76} won't log no matter it's success or not, we can still tell the difference physically. When the SYN cookie is turned on, this command won't do anything. But when the SYN cookie is turned off, this command will cause the cooling fan to make a huge noise.\\
 Screenshot: 
-\href{https://i.loli.net/2018/09/05/5b8f645f3315a.png}{Server}, 
-\href{https://i.loli.net/2018/09/05/5b8f645f325cf.png}{Client}, 
-\href{https://i.loli.net/2018/09/05/5b8f645f31ca2.png}{Attacker}
+\href{https://i.loli.net/2018/09/05/5b8f645f3315a.png}{Server},
+\href{https://i.loli.net/2018/09/05/5b8f645f325cf.png}{Client},
+\href{https://i.loli.net/2018/09/05/5b8f645f31ca2.png}{Attacker}.
+
+\subsection{TCP RST Attacks on {\ttfamily telnet} and {\ttfamily ssh} Connections}
+In order to conduct a RST attack, my Attacker should spy on the tcp traffic in and out from the Client. And I choose to use the pure command line network sniffer tool \code{tcpdump}.
+With \code{sudo tcpdump tcp and host 192.168.137.160}, I can capture all traffic using TCP protocol sended or recieved by Client.
+\begin{tlist}{3}
+  \item[$\bullet$]
+  Firstly I managed to attack with \code{netwox 78}. Initially, I think I should pass some arguments like \code{ACK} or \code{SYN}, some I spend a lot of time to figure out how to do this. And eventually I found out that \code{netwox 78} will detect tcp massage automatic. And that's why when I use \code{netwox 78 192.168.137.Server} to attack Server seemed nothing happend, because in order to trigger the auto detection Client need to send a tcp massage after the attack started. So I just tapped Enter button, and I finally get the massage saying \code{"Conection closed by foreign host"}.\\
+  Screenshot:
+  \href{https://i.loli.net/2018/09/11/5b9751105d0b4.png}{Client},
+  \href{https://i.loli.net/2018/09/11/5b9751105e414.png}{Attacker}.
+  \item[$\bullet$]
+  Using \code{netwox} to attack ssh connect, the result is almost the same, except the error massage said \code{"Broken pipe"}.\\
+  Screenshot:
+  \href{https://i.loli.net/2018/09/11/5b97536e44d80.png}{Client}.
+  By the way before the final "correct" out put, you can see there is several unsuccessful attempts. That is because I were attacking the wrong port.
+  \item[$\bullet$]
+  Trying to use scapy to reproduce the same attacking on telnet and ssh connection.
+\end{tlist}
+
+\subsection{TCP RST Attacks on Video Streaming Applications}
+\subsection{TCP Session Hijacking}
 \end{document}
