--- a/tools/Template.tex
+++ b/tools/Template.tex
@@ -89,6 +89,7 @@
 %-------------------------------%
 %             Code              %
 %-------------------------------%
+\newcommand{\code}[1]{{\ttfamily #1}}
 \definecolor{gray}{RGB}{191,191,191}
 \definecolor{dkgreen}{RGB}{96,139,78}
 \definecolor{mauve}{RGB}{206,145,120}
