--- a/571/L2/L2.tex
+++ b/571/L2/L2.tex
@@ -79,4 +79,24 @@ It seems that the single byte corruption won't cause any propagation.
 
 \section{Initial Vector}
 \subsection{}
+The Javascript source code is upload to
+\href{https://github.com/Luna1996/WUSTL/blob/master/571/L2/task41.js}{github}.
+The plaintext is
+\begin{center}
+	\code{'The quick brown fox jumps over the laze dog.\ \ \ \ '}
+\end{center}
+\code{key}, \code{iv1} and \code{iv2} are randomly generated. \code{e1} and \code{e2} using \code{iv1} as IV, \code{e3} using \code{iv2}. \code{e1} and \code{e2} are excatly same. Here is the \href{https://i.loli.net/2018/09/25/5ba9b6889cf97.png}{screen shot}. Thus since using same IV will cause the same plaintext encrypted into the same ciphertext. It's vulnerable under strong attacking.
+\subsection{}
+Yes we can. Since we have$$
+\begin{aligned}
+	C_i & =\ P_i\oplus O_i \\
+	P_i & =\ C_i\oplus O_i \\
+	O_i & =\ E_k(O_{i-1})  \\
+	O_0 & =\ IV
+\end{aligned}
+$$
+thus $O_i = C_i\oplus P_i$. Furthermore if IV remains same, all $O_i$ will remain same. By running this algorithm. We have
+\begin{center}
+	\code{P2 = 'Order: Lauch a missile!'}
+\end{center}
 \end{document}
